<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistActivity"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:gravity="center_horizontal">

    <ImageView android:id="@+id/login_picture"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/jpg"
        android:contentDescription="@string/app_name"
        android:background="@drawable/jpg"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/reg_un"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/lg_hint_un"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:background="@drawable/login_et_bg"
            android:layout_margin="2dp"
            android:maxLength="18"
            android:padding="5dp"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/lg_hint_pwd"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/login_et_bg"
            android:layout_margin="2dp"
            android:maxLength="18"
            android:padding="5dp"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_pwd2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/reg_pwd_again"
            android:imeActionId="@+id/login"
            android:background="@drawable/login_et_bg"
            android:layout_margin="2dp"
            android:maxLength="18"
            android:padding="5dp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reg_rname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="RealName"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:background="@drawable/login_et_bg"
            android:layout_margin="2dp"
            android:maxLength="18"
            android:padding="5dp"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:text="Sign Up Now!"
        android:textStyle="bold"/>

</LinearLayout>