<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/login_picture_bg">

    <ImageView
        android:id="@+id/login_picture"
        android:layout_width="100dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/jpg"
        android:contentDescription="@string/app_name"
        android:src="@drawable/jpg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/loginForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_picture">

        <LinearLayout
            android:id="@+id/id_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_un"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/login_et_bg"
                    android:hint="@string/lg_hint_un"
                    android:inputType="textEmailAddress"
                    android:maxLength="18"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/login_et_bg"
                    android:hint="@string/lg_hint_pwd"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/action_sign_in"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:background="#00ffffff"
                android:gravity="right"
                android:text="Sign Up"
                android:textColor="#d5ac4a"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>